apps/base/podinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec: 
  selector:
    matchLabels:
      app: podinfo
    template: 
      metadata: 
        labels:
          app: podinfo
      spec: 
      containers: 
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:5.0.0
          imagePullPolicy: IfNotPresent
          ports: 
            - name: http
              containerPort: 9898
              protocol: TCP
